--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,13 @@
     <groupId>com.gayoung</groupId>
     <artifactId>BookManage</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.1.6.RELEASE</version>
+    </parent>
+
     <build>
         <plugins>
             <plugin>
@@ -17,12 +24,18 @@
                     <target>8</target>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
         </plugins>
     </build>
 
+
     <properties>
-            <maven.complier.source>8</maven.complier.source>
-            <maven.complier.target>8</maven.complier.target>
+        <maven.complier.source>8</maven.complier.source>
+        <maven.complier.target>8</maven.complier.target>
     </properties>
 
     <dependencies>
@@ -32,5 +45,13 @@
             <version>8.0.23</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
     </dependencies>
+
+
+
+
 </project>
